# minervamnt

./: .env.example  .envrc.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.mainnet.toml.example  config.signet.toml.example  config.toml  doppler.yaml  rustfmt.toml
.github/workflows/: deploy-landing.yml
deploy/cloudflare-pages/: README.md
deploy/cloudflared/: config-landing.yml.example  config.yml.example
deploy/pi/: README.md  config.signet.pi.toml.example  connect-ethernet-mac.sh  deploy-landing-from-mac.sh  deploy-signet-stack-from-mac.sh  enable-landing-mode.sh  enable-mint-mode.sh  harden.sh  hub-setup-watch.sh  install-albyhub.sh  install-bitcoind.sh  install-proton-wireguard.sh  install-signet-stack.sh  patch-boot-enable-lan-ssh.sh  patch-boot-ethernet-access.sh  patch-boot-vpn.sh  push-proton-wg-from-mac.sh  recover-boot-drive-mac.sh  run-recover-noninteractive.sh  run-stack-from-mac.sh  setup-node-stack.sh  setup-wifi.sh
deploy/systemd/: barkd-signet.service  cdk-signatory-signet.service  cloudflared.service.example  minerva-mint-signet.service  minerva-mint.service  minervamnt-landing.service
deploy/tailscale/: README.md  install-mint-tailscale.sh  serve-https.sh
docs/: DISCLAIMER.md  arkade-asp.md  signet-asp.md  signet-operator-runbook.md  trust-model.md
examples/: signatory_ping.rs  wallet_e2e.rs
landing/: index.html  styles.css  terms.html  tos.js
scripts/: find-pi.sh  finish-usb-failover-flash.sh  fix-after-imager.sh  flash-dual-boot-perseus.sh  flash-ubuntu-perseus.sh  reseed-pi-boot-wifi.sh  run-dual-flash-admin.sh  run-dual-flash-sd-primary.sh  signet-melt-smoke.sh  signet-signatory-ping.sh  signet-wallet-e2e.sh  start-cdk-signatory-signet.sh  update-github-about.sh  write-agpl-license.sh
src/: api.rs  ark_arkade.rs  ark_barkd.rs  ark_client.rs  ark_wallet_http.rs  bitcoin.rs  blind_signer.rs  bolt11_util.rs  config.rs  error.rs  health.rs  keyset_cache.rs  lib.rs  main.rs  mint_backend.rs  ots.rs  pol.rs  scheduler.rs  signatory.rs  spent_store.rs  tasks.rs  types.rs  vtxo_inventory.rs  vtxo_verify.rs
src/api/: ark.rs  cashu.rs  mod.rs
tests/: e2e.rs  integration.rs
